--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.16.0",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.3",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.515.0",
     "mail-sender-package": "^1.0.31",
     "printfirst": "^1.0.0",
@@ -20,7 +22,7 @@
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.4",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
